Bug 450407 - problematic DA1 response
Summary: problematic DA1 response
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: emulation (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-02-16 20:27 UTC by Christian Persch
Modified: 2022-02-24 13:11 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christian Persch 2022-02-16 20:27:47 UTC
On konsole git master, commit 6158567c52590a6c2aef23807ff0523bd701547a, which added SIXEL support, also changed the DA1 response to "\033[?63;1;2;3;4;6;7;8c". However, this is overpromising the supported feature set. According to DEC documentation, this response means that in addition to SIXEL (4), it announces support for the printer port (2), ReGIS (3), selective erase (6), DRCS character sets (7) and user-defined keys (8). As far as I can tell, konsole supports none of these features, so this will make DA1-based feature detection not work correctly.

I think it would be best to have DA1 be accurate and thus remove the extra codes, leaving only 1 and 4.
Comment 1 Bug Janitor Service 2022-02-23 17:00:25 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/konsole/-/merge_requests/602
Comment 2 ninjalj 2022-02-24 13:11:11 UTC
Git commit 0cc64dcf7b90075bd17e46653df3069208d6a590 by Luis Javier Merino Morán.
Committed on 23/02/2022 at 17:05.
Pushed by tcanabrava into branch 'master'.

Identify as VT2xx with DECCOLM and SIXEL

As Christian Persch noted, commit 6158567c announces more extensions
than konsole supports.  Tone it down a little.  For consistency, also
self-identify as VT220 in DA2.

M  +2    -2    src/Vt102Emulation.cpp

https://invent.kde.org/utilities/konsole/commit/0cc64dcf7b90075bd17e46653df3069208d6a590