Identify as VT2xx with DECCOLM and SIXEL

As Christian Persch noted, commit 6158567c announces more extensions
than konsole supports.  Tone it down a little.  For consistency, also
self-identify as VT220 in DA2.

BUG: 450407